// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <th
            className="upcoming-appt-head"
            colSpan={6}
          >
            Upcoming Appointments
          </th>
        </thead>
        <tbody>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <th
            className="past-appt-head"
            colSpan={6}
          >
            Past Appointments
          </th>
        </thead>
        <tbody>
          <tr>
            <td>
              July 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
          <tr>
            <td>
              July 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`With Just Future Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <th
            className="upcoming-appt-head"
            colSpan={6}
          >
            Upcoming Appointments
          </th>
        </thead>
        <tbody>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              September 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`With No Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <div
        className="page-instructions"
      >
        <p>
          Patient has no appointment history
        </p>
      </div>
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`With only Past Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <th
            className="past-appt-head"
            colSpan={6}
          >
            Past Appointments
          </th>
        </thead>
        <tbody>
          <tr>
            <td>
              July 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
          <tr>
            <td>
              July 3, 2017
            </td>
            <td>
              3:38 PM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-567-8910
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
